# omop-llm

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint-pr.yml  release.yml
docs/: index.md  reference.md
docs/usage/: installation.md
reference/: index.html
search/: search_index.json
src/omop_llm/: __init__.py  providers.py
src/omop_llm/interface/: __init__.py  client.py  instructor_client.py
tests/: test_dummy.py  test_providers.py
usage/installation/: index.html
