[project]
name = "omop-llm"
version = "0.1.1"
description = "LLM interfaces for OMOP"
authors = [
  {name = "Nico Loesch", email = "n.loesch@unsw.edu.au"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.13.0",
    "prompt-spec>=0.1.4",
    "openai",
    "numpy",
    "pydantic",
  ]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "types-pyyaml>=6.0.12.20250915",
    "mkdocs<2.0",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-mermaid2-plugin"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omop_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "unit: Unit tests that do not require external API calls",
  "integration: Tests that hit live LLM endpoints (requires API keys)",
]